...
          paddingHorizontal: 10,
          marginVertical: 5,
          gap: 15,
        }}>
          <RoomSearchBar
            location={originCoords ?? myLocationCoords}
            placeholder="origin room"
            searchType={"origin"}
            setRoomSearched={setOriginRoomSearched}
          />
          <RoomSearchBar
            location={destinationCoords}
            placeholder="destination room"
            searchType={"destination"}
            setRoomSearched={setDestinationRoomSearched}
          />
        </View>
      )}

...
