...
    },
    {
        "type": "Feature",
        "properties": {
            "indoor": "room",
            "level": "-2",
            "ref": "S2.115"
        },
        "geometry": {
            "type": "Polygon",
            "coordinates": [
                [
                    [
...
