appId: com.cristina.trofimov143.frontend
---
- launchApp

- waitForAnimationToEnd:
    timeout: 1100
- longPressOn: "Destination"
- inputText: "a"
- swipe:
    start: 50%, 50% # From (90% of width, 50% of height)
    end: 50%, 90% # To (10% of width, 50% of height)
- swipe:
    start: 50%, 50% # From (90% of width, 50% of height)
    end: 50%, 90% # To (10% of width, 50% of height)
- swipe:
    start: 10%, 50% # From (90% of width, 50% of height)
    end: 50%, 50% # To (10% of width, 50% of height)
- tapOn:
    point: 50%, 25%
- waitForAnimationToEnd:
      timeout: 100
- tapOn:
    point: 35%, 23%

- waitForAnimationToEnd:
    timeout: 200
- swipe:
    start: 50%, 90% # From (90% of width, 50% of height)
    end: 50%, 50% # To (10% of width, 50% of height)
- waitForAnimationToEnd:
    timeout: 100
- tapOn: "origin room"
- inputText: "S2.11"
- tapOn: "S2.115"
- tapOn: "destination room"
- inputText: "81"
- tapOn: "817"
- swipe:
      start: 50%, 50% # From (90% of width, 50% of height)
      end: 50%, 90% # To (10% of width, 50% of height)
- swipe:
      start: 10%, 50% # From (90% of width, 50% of height)
      end: 50%, 50% # To (10% of width, 50% of height)